--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1441,7 +1441,7 @@ fieldset .note {
 }
 
 .slide_viewer {
-    height: 400px;
+    height: 300px;
     overflow: hidden;
     position: relative;
 }
@@ -1640,7 +1640,8 @@ a.slide_btn {
 
 .panel-post-content .post-img {
     margin-right: 15px;
-    width: 100%;
+    max-width: 250px;
+    max-height: 180px ;
 }
 
 .panel-post-content img {
