--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -30,9 +30,7 @@
             <!--Search-->
             <div class="widget_search">
                 <form aria-label="Search" role="search" title="Tìm kiếm bài viết" class="m-0">
-                    <input aria-label="Search" type="search" class="form-control form-search" name="s"
-                           value="Tìm kiếm" onfocus="if (this.value === 'Tìm kiếm') { this.value = ''; }"
-                           onblur="if (this.value === '') this.value='Tìm kiếm';">
+                    <input type="search" class="form-control form-search" placeholder="Tìm kiếm" id="searchLetter">
                 </form>
             </div>
             <!--Contact Number-->
