--- a/project/src/main/resources/templates/schoolYear/editSchoolYear.html
+++ b/project/src/main/resources/templates/schoolYear/editSchoolYear.html
@@ -14,6 +14,7 @@
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+    <script th:src="@{/js/public/moment.min.js}"></script>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 </head>
