--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -97,7 +97,7 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">GỬI BÀI TRUYỀN THÔNG</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{createPost}">Tạo bài viết mới</a>
-                            <a class="dropdown-item" th:href="@{/}">Xem lịch sử đăng bài</a>
+                            <a class="dropdown-item" th:href="@{managePost}">Xem lịch sử đăng bài</a>
                         </div>
                     </li>
 
