--- a/project/src/main/resources/templates/managePost/managePost.html
+++ b/project/src/main/resources/templates/managePost/managePost.html
@@ -33,10 +33,10 @@
                     <div class="form-group text-left mb-1">
                         <label>Trạng thái:</label>
                         <select class="combobox form-control w-75" id="status">
-                            <option value="">Tất cả</option>
-                            <option value="0" >Chưa duyệt</option>
-                            <option value="1" selected>Đã đăng</option>
-                            <option value="2">Từ chối</option>
+                            <option value="" selected>Tất cả</option>
+                            <option value="0">Đã đăng</option>
+                            <option value="1">Đã ẩn</option>
+                            <option value="2">Chờ duyệt</option>
                         </select>
                     </div>
                 </div>
