Fix bug 30/07/2020 1. createPost + editPost - Ảnh bìa cố định kích thước - Thêm checkbox ghim/bỏ ghim khi admin đăng bài hoạc quyệt bài
2. postDetail
- (easyimage easyimage-full) thêm class cho bài viết , các bài viết detail đang bị mất style vì k có class
- Khi bài biết ở trạng thái chưa duyệt người đăng có quyền xóa và sửa
- Đổi tên button : đăng bài/ ẩn bài( bỏ xóa)

3. homePage
- Khi không có bài ghim thì bài viết ngày lớn nhất lên đầu
- Thêm lazy load cho ảnh

4. editViolationTye
- Chưa validate khi nhập điểm âm

5. violationList
- messgae xóa thành công trả ra đang giống nhau.

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1640,7 +1640,8 @@ a.slide_btn {
     border-radius: 10px;
     position: relative;
 }
-.panel-post a{
+
+.panel-post a {
     color: #212529;
 }
 
@@ -1716,11 +1717,17 @@ a.slide_btn {
     line-height: 29px;
     text-transform: uppercase;
 }
+
+.post-content-text {
+    overflow: auto;
+}
+
 /*Button upload image*/
 #cke_imageCover .cke_bottom {
     display: none;
 }
-#cke_imageCover .cke_top  {
+
+#cke_imageCover .cke_top {
     padding: 0;
 }
 
@@ -1732,14 +1739,15 @@ a.slide_btn {
     width: 68px;
 }
 
-#cke_imageCover .cke_button_icon.cke_button__easyimageupload_icon  {
-    background: transparent!important;
+#cke_imageCover .cke_button_icon.cke_button__easyimageupload_icon {
+    background: transparent !important;
     width: auto;
     height: auto;
     float: none;
     text-align: center;
 }
-#cke_imageCover .cke_button_icon.cke_button__easyimageupload_icon:before{
+
+#cke_imageCover .cke_button_icon.cke_button__easyimageupload_icon:before {
     content: 'Tải tệp';
     font-size: 0.9rem;
     margin-left: 8px;
