--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery.lazyload.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -24,9 +25,9 @@
     <div class="slider">
         <div class="slide_viewer">
             <div class="slide_group">
-                <div class="slide"><img src="https://picsum.photos/1200/800/?random" title="Silde Photo 1"></div>
-                <div class="slide"><img src="https://picsum.photos/1200/800/?random" title="Silde Photo 2"></div>
-                <div class="slide"><img src="https://picsum.photos/1200/800/?random" title="Silde Photo 3"></div>
+                <div class="slide"><img class="lazy" data-original="https://picsum.photos/1200/800/?random" title="Silde Photo 1"></div>
+                <div class="slide"><img class="lazy" data-original="https://picsum.photos/1200/800/?random" title="Silde Photo 2"></div>
+                <div class="slide"><img class="lazy" data-original="https://picsum.photos/1200/800/?random" title="Silde Photo 3"></div>
             </div>
         </div>
         <div class="slide_buttons"></div>
