--- a/project/src/main/resources/templates/managePost/createPost.html
+++ b/project/src/main/resources/templates/managePost/createPost.html
@@ -6,6 +6,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery.lazyload.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -44,6 +45,13 @@
 <!--                    <img id="imagePreview"/>-->
                 </div>
             </form>
+            <div class="form-check text-left mb-4 p-0 hide">
+                <span class="custom-checkbox">
+                    <input type="checkbox" name="editOptions" value="pin">
+                    <label for="pin"></label>
+                </span>
+                <span class="ml-3">Ghim bài viết</span>
+            </div>
             <div class="post-content">
                 <textarea id="post-editor-text-content" name="post-editor-text-content" cols="80" rows="10">
                 </textarea>
