--- a/project/src/main/resources/templates/managePost/postDetail.html
+++ b/project/src/main/resources/templates/managePost/postDetail.html
@@ -7,6 +7,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery.lazyload.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -18,6 +19,8 @@
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <script th:src="@{/js/public/moment.min.js}"></script>
+    <link th:href="@{/js/public/ckeditor/contents.css}" rel="stylesheet"/>
+    <link th:href="@{/js/public/ckeditor/plugins/easyimage/styles/easyimage.css}" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 
@@ -37,10 +40,10 @@
             <div class="post-action text-right">
                 <div class="newsletterId" hidden></div>
                 <div class="status" hidden></div>
-                <input type="button" class="btn btn-danger btn-delete hide" value="XÓA">
-                <input type="button" class="btn btn-primary btn-edit hide" value="CHỈNH SỬA">
-                <input type="button" class="btn btn-danger btn-reject hide" value="TỪ CHỐI">
-                <input type="button" class="btn btn-primary btn-accept hide" value="ĐĂNG BÀI">
+                <input type="button" class="btn btn-outline-danger btn-delete hide" value="ẨN BÀI">
+                <input type="button" class="btn btn-outline-primary btn-edit hide" value="CHỈNH SỬA">
+                <input type="button" class="btn btn-outline-danger btn-reject hide" value="ẨN BÀI">
+                <input type="button" class="btn btn-outline-primary btn-accept hide" value="ĐĂNG BÀI">
             </div>
         </div>
     </div>
