kimpt142 commit sort combox week, month, semester; fix js for show button in rank 30/07

--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -57,18 +57,18 @@
         <div class="table-title-2 pb-0">
             <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
         </div>
-        <div class="table-title-2 rankWeekBtn p-0 search row">
+        <div class="table-title-2 rankWeekBtn p-0 search row" id="searchGroupButton">
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 px-0">
-                <input type="button" class="btn btn-success mr-2 manageBtn" id="editGrades" value="Sửa điểm"/>
+                <input type="button" class="btn btn-success mr-2 manageBtn hide" id="editGrades" value="Sửa điểm"/>
                 <input type="button" class="btn btn-success mx-2 manageBtn hide" id="closeEditGrades" value="Hủy"/>
             </div>
             <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 px-0 text-right">
-                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
+                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn hide"
                        value="Sửa xếp hạng tuần"/>
-                <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn"
+                <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn hide"
                        value="Tạo xếp hạng tuần"/>
-                <input type="button" id="viewHistory" class="btn btn-success ml-2" value="Xem lịch sử"/>
-                <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
+                <input type="button" id="viewHistory" class="btn btn-success ml-2 hide" value="Xem lịch sử"/>
+                <input type="button" id="download" class="btn btn-success ml-2 hide" value="Tải xuống"/>
             </div>
         </div>
         <!--            <table class="table table-bordered table-edit mt-3 display responsive nowrap" style="width:100%">-->
