--- a/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
@@ -47,13 +47,13 @@
             </div>
         </div>
         <div class="table-title-2">
-            <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
-                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
+            <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center" id="searchGroupButton">
+                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn hide"
                        value="Sửa xếp hạng kỳ"/>
-                <input type="button" id="createRankBtn" class="btn btn-success mx-2 manageBtn"
+                <input type="button" id="createRankBtn" class="btn btn-success mx-2 manageBtn hide"
                        value="Tạo xếp hạng kỳ"/>
-                <input type="button" id="viewHistory" class="btn btn-success ml-2" value="Xem lịch sử"/>
-                <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
+                <input type="button" id="viewHistory" class="btn btn-success ml-2 hide" value="Xem lịch sử"/>
+                <input type="button" id="download" class="btn btn-success ml-2 hide" value="Tải xuống"/>
             </div>
         </div>
 
