--- a/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
@@ -47,12 +47,14 @@
             </div>
         </div>
         <div class="table-title-2">
-            <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center" id="searchGroupButton">
-                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn hide"
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
+                <input type="button" id="viewHistory" class="btn btn-success mr-2 hide" value="Xem lịch sử"/>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right" id="searchGroupButton">
+                <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn hide"
                        value="Sửa xếp hạng kỳ"/>
-                <input type="button" id="createRankBtn" class="btn btn-success mx-2 manageBtn hide"
+                <input type="button" id="createRankBtn" class="btn btn-success ml-2 manageBtn hide"
                        value="Tạo xếp hạng kỳ"/>
-                <input type="button" id="viewHistory" class="btn btn-success ml-2 hide" value="Xem lịch sử"/>
                 <input type="button" id="download" class="btn btn-success ml-2 hide" value="Tải xuống"/>
             </div>
         </div>
