--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -58,16 +58,16 @@
             <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
         </div>
         <div class="table-title-2 rankWeekBtn p-0 search row" id="searchGroupButton">
-            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 px-0">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
+                <input type="button" id="viewHistory" class="btn btn-success mr-2 hide" value="Xem lịch sử"/>
                 <input type="button" class="btn btn-success mr-2 manageBtn hide" id="editGrades" value="Sửa điểm"/>
-                <input type="button" class="btn btn-success mx-2 manageBtn hide" id="closeEditGrades" value="Hủy"/>
+                <input type="button" class="btn btn-success mr-2 manageBtn hide" id="closeEditGrades" value="Hủy"/>
             </div>
-            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 px-0 text-right">
-                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn hide"
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right">
+                <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn hide"
                        value="Sửa xếp hạng tuần"/>
-                <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn hide"
+                <input type="button" id="createRank" class="btn btn-success ml-2 manageBtn hide"
                        value="Tạo xếp hạng tuần"/>
-                <input type="button" id="viewHistory" class="btn btn-success ml-2 hide" value="Xem lịch sử"/>
                 <input type="button" id="download" class="btn btn-success ml-2 hide" value="Tải xuống"/>
             </div>
         </div>
