--- a/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
@@ -42,12 +42,14 @@
             </div>
         </div>
         <div class="table-title-2">
-            <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
-                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
+                <input type="button" id="viewHistory" class="btn btn-success mr-2" value="Xem lịch sử"/>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right" id="searchGroupButton">
+                <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn"
                        value="Sửa xếp hạng năm"/>
-                <input type="button" id="createRankBtn" class="btn btn-success mx-2 manageBtn"
+                <input type="button" id="createRankBtn" class="btn btn-success ml-2 manageBtn"
                        value="Tạo xếp hạng năm"/>
-                <input type="button" id="viewHistory" class="btn btn-success ml-2" value="Xem lịch sử"/>
                 <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
             </div>
         </div>
