add combobox class in module rank

--- a/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
@@ -35,7 +35,12 @@
                         <select class="combobox form-control w-75" id="byYear"></select>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0"></div>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Lớp:</label>
+                        <select class="combobox form-control w-75" id="byClass"></select>
+                    </div>
+                </div>
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0 text-right">
                     <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
                 </div>
