--- a/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankBySemester.html
@@ -41,16 +41,22 @@
                         <select class="combobox form-control w-75" id="bySemester"></select>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0 text-right">
-                    <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Lớp:</label>
+                        <select class="combobox form-control w-75" id="byClass"></select>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="table-title-2">
+        <div class="table-title-2 pb-0">
+            <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
+        </div>
+        <div class="table-title-2 p-0 search row" id="searchGroupButton">
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
                 <input type="button" id="viewHistory" class="btn btn-success mr-2 hide" value="Xem lịch sử"/>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right" id="searchGroupButton">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right">
                 <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn hide"
                        value="Sửa xếp hạng kỳ"/>
                 <input type="button" id="createRankBtn" class="btn btn-success ml-2 manageBtn hide"
