--- a/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
@@ -7,6 +7,9 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <!--Select2-->
+    <link rel="stylesheet" th:href="@{/css/select2.min.css}">
+    <script th:src="@{/js/public/select2.min.js}"></script>
     <!--Table-->
     <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap4.min.css}">
     <link rel="stylesheet" th:href="@{/css/responsive.dataTables.min.css}">
@@ -129,7 +132,6 @@
         </div>
     </div>
 </div>
-
 
 <!--    Modal Message-->
 <div class="modal fade" tabindex="-1" role="dialog" id="messageModal">
